2010-10-20  Jer Noble  <jer.noble@apple.com>

Reviewed by Eric Carlson.

        Video -> Canvas doesn't work on Windows
        https://bugs.webkit.org/show_bug.cgi?id=47996
        rdar://problem/7884690

        * WebCore.vcproj/QTMovieWin.vcproj: Added QTDecompressionSession.{cpp,h}
        * platform/graphics/win/MediaPlayerPrivateQuickTimeVisualContext.cpp:
        (WebCore::MediaPlayerPrivateQuickTimeVisualContext::paint): Create a
            QTDecompressionSession if necessary and convert the QTPixelBuffer
            into a CG-compatible one.
        * platform/graphics/win/QTDecompressionSession.cpp: Added.
        * platform/graphics/win/QTDecompressionSession.h: Added.
        * platform/graphics/win/QTPixelBuffer.cpp:
        (SetNumberValue): Moved from QTMovieVisualContext.
        (QTPixelBuffer::createPixelBufferAttributesDictionary): Moved from inside
            QTMovieVisualContext::createPixelBufferOptionsDictionary().
        * platform/graphics/win/QTPixelBuffer.h: Moved the Type enum
            from QTMovieVisualContext.h.


Canonical link: https://commits.webkit.org/60803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70252 268f45cc-cd09-0410-ab3c-d52691b4dbfc