third_party/WebKit/WebCore/platform/graphics/win/QTDecompressionSession.h
@@ -1,6 +1,6 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
- * Copyright (C) 2007, 2008, 2009, 2010 Apple, Inc.  All rights reserved.
+ * Copyright (C) 2010 Apple, Inc.  All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -24,8 +24,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
  */
 
-#ifndef QTMovieVisualContext_h
-#define QTMovieVisualContext_h
+#ifndef QTDecompressionSession_h
+#define QTDecompressionSession_h
 
 #ifdef QTMOVIEWIN_EXPORTS
 #define QTMOVIEWIN_API __declspec(dllexport)
@@ -33,48 +33,33 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define QTMOVIEWIN_API __declspec(dllimport)
 #endif
 
-#include "QTMovie.h"
-#include "QTMovieTask.h"
 #include "QTPixelBuffer.h"
-#include <WTF/OwnPtr.h>
-#include <WTF/RefCounted.h>
 
-typedef const struct __CFDictionary* CFDictionaryRef;
-typedef struct OpaqueQTVisualContext*   QTVisualContextRef;
+#include <WTF/PassOwnPtr.h>
 
-// QTCVTimeStamp is a struct containing only a CVTimeStamp.  This is to 
-// work around the inability of CVTimeStamp to be forward declared, in 
-// addition to it being declared in different header files when building
-// the QTMovieWin and WebCore projects.
-struct QTCVTimeStamp;
+class QTDecompressionSessionClient;
+typedef struct OpaqueICMDecompressionSession*  ICMDecompressionSessionRef;
 
-class QTMovieVisualContextClient {
+class QTMOVIEWIN_API QTDecompressionSession {
 public:
-    virtual void imageAvailableForTime(const QTCVTimeStamp*) = 0;
-};
+    static PassOwnPtr<QTDecompressionSession> create(unsigned long pixelFormat, size_t width, size_t height);
+    ~QTDecompressionSession();
 
-class QTMOVIEWIN_API QTMovieVisualContext : public RefCounted<QTMovieVisualContext> {
-public:
-    static PassRefPtr<QTMovieVisualContext> create(QTMovieVisualContextClient*, QTPixelBuffer::Type);
-    ~QTMovieVisualContext();
+    bool canDecompress(QTPixelBuffer);
 
-    bool isImageAvailableForTime(const QTCVTimeStamp*) const;
-    QTPixelBuffer imageForTime(const QTCVTimeStamp*);
-    void task();
+    // The resulting QTPixelBuffer will be a CG compatable ARGB pixel buffer.
+    QTPixelBuffer decompress(QTPixelBuffer);
 
-    QTVisualContextRef visualContextRef();
+private:
+    friend class QTDecompressionSessionClient;
+    QTDecompressionSession(unsigned long pixelFormat, size_t width, size_t height);
+    void initializeSession();
 
-    void setMovie(PassRefPtr<QTMovie>);
-    QTMovie* movie() const;
-
-    static double currentHostTime();
-
-protected:
-    QTMovieVisualContext(QTMovieVisualContextClient*, QTPixelBuffer::Type);
-    void setupVisualContext();
-
-    friend class QTMovieVisualContextPriv;
-    OwnPtr<QTMovieVisualContextPriv> m_private;
+    unsigned long m_pixelFormat;
+    size_t m_width;
+    size_t m_height;
+    QTPixelBuffer m_latestFrame;
+    ICMDecompressionSessionRef m_session;
 };
 
 #endif
